Tue May 15 18:17:45 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * performance-tests/Protocols/Sender/Sender_exec.cpp:
        * tools/IDL3_to_IDL2/basic_visitor.cpp:
        * tools/IDL3_to_XMI/be_sunsoft.cpp:
          Removed support for Tandem NSK. That was the last platform that
          needed the emulated versions of ACE_INT64 and ACE_UINT64, that
          emulation has now been removed

Tue May 15 13:35:32 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * MPC/config/dds4ccm.mpb:
        * MPC/config/dds4ccm_base.mpb:
        * MPC/config/dds4ccm_impl.mpb:
        * MPC/config/dds4ccm_ts_default.mpb:
        * MPC/config/ndds_idltocpp.mpb:
        * MPC/config/ndds_idltocpp_ts_defaults.mpb:

        * connectors/dds4ccm/examples/Hello/Base/Hello_Base.idl:

        * connectors/dds4ccm/examples/Hello/Connector/Hello_Connector.idl:
        * connectors/dds4ccm/examples/Hello/Connector/Hello_Connector.mpc:

        * connectors/dds4ccm/examples/IDL2CPPWrapper/Shapes/Base/I2C_ShapeType.mpc:

        * connectors/dds4ccm/examples/IDL2CPPWrapper/Shapes/Common/I2C_Shapes_Common.mpc:

        * connectors/dds4ccm/examples/IDL2CPPWrapper/Shapes/Receiver/I2C_Shapes_Receiver.mpc:

        * connectors/dds4ccm/examples/IDL2CPPWrapper/Shapes/Sender/I2C_Shapes_Sender.mpc:

        * connectors/dds4ccm/examples/Large_Deployment/Common/Common.idl:

        * connectors/dds4ccm/examples/Large_Deployment/Connector/Large_Connector.idl:
        * connectors/dds4ccm/examples/Large_Deployment/Connector/Large_Connector.mpc:

        * connectors/dds4ccm/examples/Large_Deployment/DDS_Pub/DDS_Pub.mpc:

        * connectors/dds4ccm/examples/Large_Deployment/DDS_Sub/DDS_Sub.mpc:

        * connectors/dds4ccm/examples/Quoter/Base/Quoter_Base.idl:

        * connectors/dds4ccm/examples/Quoter/Connector/Quoter_Connector.idl:
        * connectors/dds4ccm/examples/Quoter/Connector/Quoter_Connector.mpc:

        * connectors/dds4ccm/examples/Shapes/Base/Shapes_Base.idl:
