@@ -68,7 +68,7 @@ namespace CIAO_Shapes_Receiver_comp_Impl
     //@}
 
   private:
-    /// Context for component instance. Uses for all middleware communication.
+    /// Context for component instance. Used for all middleware communication.
     ::Shapes::CCM_Receiver_comp_Context_var ciao_context_;
   };
 
@@ -100,7 +100,7 @@ namespace CIAO_Shapes_Receiver_comp_Impl
     //@}
 
   private:
-    /// Context for component instance. Uses for all middleware communication.
+    /// Context for component instance. Used for all middleware communication.
     ::Shapes::CCM_Receiver_comp_Context_var ciao_context_;
   };
 
@@ -188,7 +188,7 @@ namespace CIAO_Shapes_Receiver_comp_Impl
     //@}
   };
 
-  /// Factory method and library entry point used by the middelware
+  /// Factory method and library entry point used by the middleware
   /// @return new component instance
   extern "C"  ::Components::EnterpriseComponent_ptr
   create_Shapes_Receiver_comp_Impl (void);
